@@ -23,7 +23,7 @@ tasks.register<Exec>("packageExe") {
     group = "build"
     description = "Packages the application into an executable format using JPackage."
     dependsOn("shadowJar")
-    if (file("build/jpackage").exists()) file("build/jpackage").deleteRecursively()
+    delete("build/jpackage")
     commandLine(
         "jpackage",
         "--type", "app-image",
@@ -32,7 +32,8 @@ tasks.register<Exec>("packageExe") {
         "--main-jar", "client.jar",
         "--icon", "icon.ico",
         "--dest", "build/jpackage",
-        "--win-console"
+        "--win-console",
+        "--java-options", "--enable-native-access=ALL-UNNAMED"
     )
     doLast { file("build/jpackage/client/client.ico").delete() }
 }
